@@ -2,14 +2,13 @@
  * Breath-First-Search Algorithm
  * @author jmetzger kvnhan
  */
-
 package basic_searches;
 
+import java.util.Collections;
 import java.util.LinkedList;
+
 import SetUp.Graph;
 import SetUp.Node;
-
-
 
 public class BFS {
 
@@ -17,138 +16,104 @@ public class BFS {
 	LinkedList<String> visited = new LinkedList<String>();
 	LinkedList<String> DeadEnd = new LinkedList<String>();
 	LinkedList<String> dups = new LinkedList<String>();
+	LinkedList<String> expanded = new LinkedList<String>();
 	LinkedList<Node> visitedNode = new LinkedList<Node>();
 	int found = 0;
-	Node prevSib = null;
+	Node prev = null;
 
 	public BFS(){
-
+	
 	}
-
-	public boolean bfs(Graph graph, Node node){
-
+	
+public boolean bfs(Graph graph, Node node, Node from){
+		
 		LinkedList<Node> startQueue = new LinkedList<Node>();
 		LinkedList<LinkedList<Node>> dummyqueue = new LinkedList<LinkedList<Node>>();
 		LinkedList<Node> path = new LinkedList<Node>();
 		Node startState;
 		startState = graph.getS();
-
+		dups = new LinkedList<String>();
+		
 
 		// Find S Node
 		if(visited.isEmpty()){
+			node = startState;
 			path = graph.getChildrenOf(startState);
 			startQueue.add(startState);
 			queue.add(startQueue);
 			visited.add(startState.getName());
 			visitedNode.add(startState);
-			System.out.println("Expand " + visited.getFirst());
-			printQueue2(queue);
-			queue = new LinkedList<LinkedList<Node>>();
 			path = graph.getChildrenOf(node);
 			path = sortPath(path, node);
-		}else{
+			expanded.add(node.getName());
+			node.getAdjacentNodes().addFirst(node);
+		}else{	
 			path = graph.getChildrenOf(node);
-			path = removedVisitedPath(path);
-
+			path = removePath(path, from);			
 			// Dead End
 			if(path.size() == 0){
-				System.out.println("Dead End " + node.getName());
+				System.out.println("Expand " + node.getName() + "\n");
+				printQueue2(queue);
 				graph.setVisited(node);
-				DeadEnd.add(node.getName());
 				queue = pop();
-				node = visitedNode.getFirst();
+				node = queue.getFirst().get(0);
+				from = queue.getFirst().get(1);
 				path = graph.getChildrenOf(node);
-				path = removedVisitedPath(path);
-				path = sortPath(path, node);
-
+				path = sortPath(path, node);	
 			}else{
 				path = sortPath(path, node);
 				visitedNode.addFirst(node);
 				visited.addFirst(node.getName());
-				graph.setVisited(node);
-				//printQueue(path);
+				graph.setVisited(node);		
 			}
 		}
-
 		// Get A list of Adjacent Node
 		for(Node child: path){
-			if(child.getAdjacentNodes().size() == 0){
-				child.setAdjacentNodes(visitedNode);
+			if(!child.getName().equals(from.getName()) && !IsDescendant(queue.getFirst(), child)){
+				child.reset();
+				child.setAdjacentNodes(queue.getFirst());
 				child.getAdjacentNodes().addFirst(child);
 				printQueue(child.getAdjacentNodes());
-				if(queue.size() < 2){
-					System.out.println("\n" + queue.size());
-					queue.addLast(child.getAdjacentNodes());
-					System.out.println("\nSo the queue is emmpty");
-				}else{
-					System.out.println("Hello");
-					System.out.println("\n" + dummyqueue.size());
-					queue = pop();
-					dummyqueue.addLast(child.getAdjacentNodes());
-				}
-
+				System.out.println();
+				dummyqueue.addLast(child.getAdjacentNodes());	
 			}
+		}		
+		System.out.println("Expand " + node.getName() + "\n");
+		queue = fixQueue(dummyqueue);
+		printQueue2(queue);
+		if(!expanded.contains(node.getName())){
+			expanded.add(node.getName());
 		}
-
-
 		// Traversing the graph to Find G Node
-		int size = path.size();
-		System.out.println(queue.size());
-		for(Node c: path){
-			if(c.visited == 0 && found == 0){
-				if(!c.getName().equals("G")){
-					System.out.println("Parent is still " + node.getName());
-					System.out.println("Expand " + c.getName() + "\n");
-					queue = fixQueue(visitedNode.getFirst(), dummyqueue);
-					printQueue2(dummyqueue);
-					c.setvisted();
-					printQueue2(queue);
-					found = 0 ;
-					if(size < 2) {
-						System.out.println("Node " + c.getName());
-						System.out.println("Prev Node " + prevSib.getName());
-
-						bfs(graph, prevSib);
-					}else {
-						size--;
-						prevSib = c;
-					}
-				}else{
-					System.out.println("Expand " + c.getName() + "\n");
-					queue = fixQueue(visitedNode.getFirst(), dummyqueue);
-					c.setvisted();
-					printQueue2(queue);
-					System.out.println("goal reached!\n");
-					found = 1;
-				}
-			}
-
+		if(!queue.getFirst().getFirst().getName().equals("G")){
+			queue = pop();
+			Node newnode = queue.getFirst().get(0);
+			Node fromNode = queue.getFirst().get(1);
+			bfs(graph, newnode, fromNode);
+		}else{
+			System.out.println("Goal Reached!");
 		}
+		
+		
+		
 		return false;
 	}
 
-	public LinkedList<LinkedList<Node>> fixQueue(Node child, LinkedList<LinkedList<Node>> dummyqueue){
-
-		LinkedList<LinkedList<Node>> queue2 = new LinkedList<LinkedList<Node>>();
+	public LinkedList<LinkedList<Node>> fixQueue(LinkedList<LinkedList<Node>> dummyqueue){
 		for(LinkedList<Node> node: dummyqueue){
-			queue2.addLast(node);
+			queue.addLast(node);
 		}
-
-		for(LinkedList<Node> node: queue){
-			if(!node.getFirst().getName().equals(child.getName())){
-				queue2.addLast(node);
-			}
-		}
-		return queue2;
-	}
-
-	public LinkedList<LinkedList<Node>> pop(){
-		queue.removeFirst();
-
 		return queue;
 	}
+	
+	public LinkedList<LinkedList<Node>> pop(){
+		queue.removeFirst();
+		
+		return queue;
+	}
+	
 	public void printQueue(LinkedList<Node> list){
-
+		
 		int size = list.size();
 		int count = 0;
 		for(Node n: list){
@@ -156,12 +121,24 @@ public class BFS {
 			if(size == count){
 				System.out.print("" + n.getName() + "");
 			}else{
-				System.out.print("" + n.getName() + ",");
+				System.out.print("" + n.getName() + ",");	
 			}
 		}
-
+		
 	}
-
+	
+	public LinkedList<Node> removePath(LinkedList<Node> p, Node node){
+		LinkedList<Node> l = new LinkedList<Node>();
+		for(Node n: p){
+			if(!n.getName().equals(node.getName())){
+				//System.out.println(n.getName() + " " + n.visited);
+				l.addFirst(n);
+			}
+			
+			
+		}
+		return l;
+	}
 	public LinkedList<Node> removedVisitedPath(LinkedList<Node> p){
 		LinkedList<Node> l = new LinkedList<Node>();
 		for(Node n: p){
@@ -170,31 +147,40 @@ public class BFS {
 				//System.out.println(n.getName() + " " + n.visited);
 				l.addFirst(n);
 			}
-
-
+			
+			
 		}
 		return l;
 	}
 
 	public LinkedList<Node> sortPath(LinkedList<Node> list, Node n){
-		double temp = 0.0;
 		LinkedList<Node> newPath = new LinkedList<Node>();
-		for(int i = 0; i < list.size(); i++){
-			if(list.get(i).getDistanceTo(n) > temp && !dups.contains(list.get(i).getName())){
-				newPath.addLast(list.get(i));
-				temp = list.get(i).getDistanceTo(n);
+		LinkedList<String> stringList = new LinkedList<String>();
 
-			}else{
-				newPath.addFirst(list.get(i));
-				dups.addFirst(list.get(i).getName());
+		for(Node node: list){
+			stringList.add(node.getName());
+		}
+		Collections.sort(stringList);
+		for(String str: stringList){
+			for(Node node: list){
+				if(node.getName().equals(str) && !dups.contains(node.getName())){
+					newPath.addLast(node);		
+					dups.addFirst(node.getName());
+				}
 			}
 		}
-
-		return newPath;
+		return newPath;	
 	}
-
+	
+	public boolean IsDescendant(LinkedList<Node> list, Node path){
+		for(Node node: list){
+			if(node.getName().equals(path.getName())){
+				return true;
+			}
+		}
+		return false;
+	}
 	public void printQueue2(LinkedList<LinkedList<Node>> list){
-
 		System.out.print("[");
 		for(LinkedList<Node> nodes: list){
 			for(Node n: nodes){
@@ -210,5 +196,4 @@ public class BFS {
 		System.out.print("]");
 		System.out.println();
 	}
-
 }
